@@ -4,6 +4,8 @@
 - Website needs to link to docs:
   http://savannah.nongnu.org/download/avrdude/doc/avrdude-html/
 
+- Remove old options from manpage and texinfo-documentation
+
 - [Windows Port] Use Windows API for serial port communications (ser_win32.c).
   (In Progress)
   
