@@ -1,3 +1,7 @@
+2004-02-10  Jan-Hinnerk Reichert  <hinni@despammed.com>
+
+	* main.c: Removed deprecated options.
+
 2004-01-28  Jan-Hinnerk Reichert  <hinni@despammed.com>
 
 	* pgm.c, main.c, avr910.c, butterfly.c, stk500.c:
